[gd_scene load_steps=46 format=3 uid="uid://bcnccfiuyayep"]

[ext_resource type="Script" path="res://Scripts/GameplayManager.gd" id="1_6mopy"]
[ext_resource type="Texture2D" uid="uid://cufr4urc28ksr" path="res://Textures/Kitchen/LargeCounter.png" id="1_oqi3v"]
[ext_resource type="Texture2D" uid="uid://c6w3lbkhu1qs2" path="res://Textures/Kitchen/LargeCounter2.png" id="2_taroe"]
[ext_resource type="Texture2D" uid="uid://d23uccej7w5mk" path="res://Textures/Kitchen/SmallCounter2.png" id="3_7lhwp"]
[ext_resource type="Texture2D" uid="uid://cu0lhbcnxgqjv" path="res://Textures/Kitchen/SmallCounter.png" id="4_k2vib"]
[ext_resource type="Texture2D" uid="uid://bsdwvimfvrp5n" path="res://Textures/OrangeCat.png" id="6_ccgq3"]
[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="6_e817y"]
[ext_resource type="Texture2D" uid="uid://cw2f5sbhfujj6" path="res://Textures/Kitchen/Cupboard.png" id="7_shgab"]
[ext_resource type="Texture2D" uid="uid://dgqjw7gx7buut" path="res://Textures/Kitchen/Cupboard2.png" id="8_h7v0b"]
[ext_resource type="Texture2D" uid="uid://b4vmuxdgy87th" path="res://Textures/Kitchen/KitchenTiles.png" id="9_j74r0"]
[ext_resource type="Texture2D" uid="uid://dksoqrljjj7rs" path="res://Textures/Kitchen/Oven2.png" id="10_uvas7"]
[ext_resource type="Texture2D" uid="uid://dmscsryuouqma" path="res://Textures/Kitchen/Rangehood.png" id="11_nryyt"]
[ext_resource type="Texture2D" uid="uid://5amju23qnr0b" path="res://Textures/Kitchen/CatTreats.png" id="13_s2c8l"]
[ext_resource type="Texture2D" uid="uid://b0hwkov08fjr8" path="res://Textures/Kitchen/BowlOfFruit.png" id="14_522s0"]
[ext_resource type="Texture2D" uid="uid://ft4qeasx0ntk" path="res://Textures/Kitchen/Pear.png" id="15_i5q76"]
[ext_resource type="Texture2D" uid="uid://peihjlyu84n2" path="res://Textures/Kitchen/Banana.png" id="16_1xful"]
[ext_resource type="Texture2D" uid="uid://e1vglu0mjoe4" path="res://Textures/100.png" id="16_wtf6u"]
[ext_resource type="Texture2D" uid="uid://daop1l1dyovb3" path="res://Textures/Kitchen/Apple.png" id="17_w115x"]
[ext_resource type="Texture2D" uid="uid://bv3c8jon1j3ht" path="res://Textures/SideCat.png" id="19_x5thb"]
[ext_resource type="Texture2D" uid="uid://dl4qfj7xsc2td" path="res://Textures/StandCat.png" id="20_ggn5r"]
[ext_resource type="Texture2D" uid="uid://csd1cst7xbk1r" path="res://Textures/BlackCat.png" id="21_mb6kp"]
[ext_resource type="Texture2D" uid="uid://eosw2m4yol68" path="res://Textures/BlackSideCat.png" id="22_degpx"]
[ext_resource type="Texture2D" uid="uid://ciykbfq7rs2xt" path="res://Textures/BlackStandCat.png" id="23_dt8fl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vahfj"]
size = Vector2(1440, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfh23"]
size = Vector2(111.797, 64)

[sub_resource type="Gradient" id="Gradient_wybi8"]
offsets = PackedFloat32Array(0.233766, 1)
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4pm0c"]
gradient = SubResource("Gradient_wybi8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p5did"]
size = Vector2(1472, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gb8yh"]
size = Vector2(16, 657)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elsln"]
size = Vector2(1472, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6e46"]
size = Vector2(1472, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2w6kp"]
size = Vector2(1472, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be5dw"]
size = Vector2(1472, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02hvf"]
size = Vector2(344, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6e1et"]
size = Vector2(128, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aut1t"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8tg5r"]
size = Vector2(112, 178)

[sub_resource type="AtlasTexture" id="AtlasTexture_v58ir"]
atlas = ExtResource("16_wtf6u")
region = Rect2(0, 0, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_uac4j"]
atlas = ExtResource("16_wtf6u")
region = Rect2(0, 0, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd7xa"]
atlas = ExtResource("16_wtf6u")
region = Rect2(496, 0, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm70i"]
atlas = ExtResource("16_wtf6u")
region = Rect2(992, 0, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_faa7c"]
atlas = ExtResource("16_wtf6u")
region = Rect2(0, 272, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4in7"]
atlas = ExtResource("16_wtf6u")
region = Rect2(496, 272, 496, 272)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qbwr"]
atlas = ExtResource("16_wtf6u")
region = Rect2(992, 272, 496, 272)

[sub_resource type="SpriteFrames" id="SpriteFrames_eouja"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v58ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uac4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd7xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm70i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faa7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4in7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qbwr")
}],
"loop": false,
"name": &"ScoreAnimation",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Kitchen" type="Node2D"]
script = ExtResource("1_6mopy")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-4360, -1920)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_vahfj")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-4536, -2016)
script = ExtResource("6_e817y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
modulate = Color(1, 0, 0.25098, 1)
position = Vector2(0.101563, 0)
shape = SubResource("RectangleShape2D_hfh23")
debug_color = Color(0.865585, 1.92523e-06, 0.516324, 0.42)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.3, 0.3)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="Player" type="Sprite2D" parent="Player"]
position = Vector2(-24, 0)
texture = SubResource("GradientTexture2D_4pm0c")

[node name="OvenPrefab" type="Node2D" parent="."]
position = Vector2(-4032, -2472)

[node name="SmallCounter2" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(240, 232)
texture = ExtResource("3_7lhwp")

[node name="SmallCounter3" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(1232, 232)
texture = ExtResource("3_7lhwp")

[node name="Cupboard" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(320, -720)
texture = ExtResource("7_shgab")

[node name="Cupboard2" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(1184, -720)
texture = ExtResource("8_h7v0b")

[node name="Oven2" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(736, 232)
texture = ExtResource("10_uvas7")

[node name="Rangehood" type="Sprite2D" parent="OvenPrefab"]
position = Vector2(752, -936)
texture = ExtResource("11_nryyt")

[node name="OvenHitbox" type="StaticBody2D" parent="OvenPrefab"]
position = Vector2(736, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenPrefab/OvenHitbox"]
shape = SubResource("RectangleShape2D_p5did")

[node name="PrefabBoundry1" type="Area2D" parent="OvenPrefab"]
position = Vector2(8, -344)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OvenPrefab/PrefabBoundry1"]
shape = SubResource("RectangleShape2D_gb8yh")

[node name="BenchPrefab1" type="Node2D" parent="."]
position = Vector2(-2336, -3312)

[node name="LargeCounter" type="Sprite2D" parent="BenchPrefab1"]
position = Vector2(496, 232)
texture = ExtResource("1_oqi3v")

[node name="SmallCounter2" type="Sprite2D" parent="BenchPrefab1"]
position = Vector2(1232, 232)
texture = ExtResource("3_7lhwp")

[node name="Hitbox1" type="StaticBody2D" parent="BenchPrefab1"]
position = Vector2(736, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab1/Hitbox1"]
shape = SubResource("RectangleShape2D_elsln")

[node name="PrefabBoundry1" type="Area2D" parent="BenchPrefab1"]
position = Vector2(8, -344)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab1/PrefabBoundry1"]
shape = SubResource("RectangleShape2D_gb8yh")

[node name="BenchPrefab2" type="Node2D" parent="."]
position = Vector2(-2392, -2824)

[node name="LargeCounter2" type="Sprite2D" parent="BenchPrefab2"]
position = Vector2(496, 232)
texture = ExtResource("2_taroe")

[node name="SmallCounter" type="Sprite2D" parent="BenchPrefab2"]
position = Vector2(1232, 232)
texture = ExtResource("4_k2vib")

[node name="Hitbox2" type="StaticBody2D" parent="BenchPrefab2"]
position = Vector2(736, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab2/Hitbox2"]
shape = SubResource("RectangleShape2D_c6e46")

[node name="PrefabBoundry1" type="Area2D" parent="BenchPrefab2"]
position = Vector2(8, -344)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab2/PrefabBoundry1"]
shape = SubResource("RectangleShape2D_gb8yh")

[node name="BenchPrefab3" type="Node2D" parent="."]
position = Vector2(-2416, -2344)

[node name="LargeCounter" type="Sprite2D" parent="BenchPrefab3"]
position = Vector2(976, 232)
texture = ExtResource("1_oqi3v")

[node name="SmallCounter" type="Sprite2D" parent="BenchPrefab3"]
position = Vector2(240, 232)
texture = ExtResource("4_k2vib")

[node name="Hitbox3" type="StaticBody2D" parent="BenchPrefab3"]
position = Vector2(736, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab3/Hitbox3"]
shape = SubResource("RectangleShape2D_2w6kp")

[node name="PrefabBoundry1" type="Area2D" parent="BenchPrefab3"]
position = Vector2(8, -344)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab3/PrefabBoundry1"]
shape = SubResource("RectangleShape2D_gb8yh")

[node name="BenchPrefab4" type="Node2D" parent="."]
position = Vector2(-2448, -1864)

[node name="SmallCounter2" type="Sprite2D" parent="BenchPrefab4"]
position = Vector2(240, 232)
texture = ExtResource("3_7lhwp")

[node name="LargeCounter2" type="Sprite2D" parent="BenchPrefab4"]
position = Vector2(976, 232)
texture = ExtResource("2_taroe")

[node name="Hitbox4" type="StaticBody2D" parent="BenchPrefab4"]
position = Vector2(736, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab4/Hitbox4"]
shape = SubResource("RectangleShape2D_be5dw")

[node name="PrefabBoundry1" type="Area2D" parent="BenchPrefab4"]
position = Vector2(8, -344)
disable_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BenchPrefab4/PrefabBoundry1"]
shape = SubResource("RectangleShape2D_gb8yh")

[node name="KitchenTiles" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-4760, -2488)
scale = Vector2(0.969697, 0.969697)
texture = ExtResource("9_j74r0")

[node name="OrangeCat" type="Sprite2D" parent="."]
position = Vector2(-5568, -2640)
texture = ExtResource("6_ccgq3")

[node name="CatTreats" type="Sprite2D" parent="."]
position = Vector2(-4760, -3128)
texture = ExtResource("13_s2c8l")

[node name="FruitBowlArea" type="Area2D" parent="."]
position = Vector2(-4456, -3088)

[node name="BowlOfFruit" type="Sprite2D" parent="FruitBowlArea"]
position = Vector2(-2.9375, -62.1875)
scale = Vector2(0.536347, 0.526622)
texture = ExtResource("14_522s0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FruitBowlArea"]
position = Vector2(-4, 0)
shape = SubResource("RectangleShape2D_02hvf")

[node name="AppleArea" type="Area2D" parent="."]
position = Vector2(-4456, -3088)

[node name="Apple" type="Sprite2D" parent="AppleArea"]
z_index = -1
position = Vector2(64, -104)
scale = Vector2(0.775, 0.86)
texture = ExtResource("17_w115x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AppleArea"]
position = Vector2(62, -104)
shape = SubResource("RectangleShape2D_6e1et")

[node name="PearArea" type="Area2D" parent="."]
position = Vector2(-4454, -3104)

[node name="Pear" type="Sprite2D" parent="PearArea"]
z_index = -1
position = Vector2(-80, -95.9998)
scale = Vector2(0.625, 0.633333)
texture = ExtResource("15_i5q76")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PearArea"]
position = Vector2(-80, -96)
shape = SubResource("RectangleShape2D_aut1t")

[node name="BananaArea" type="Area2D" parent="."]
position = Vector2(-4448, -3080)

[node name="Banana" type="Sprite2D" parent="BananaArea"]
z_index = -1
position = Vector2(-40, -88)
rotation = -1.00756
scale = Vector2(0.970623, 0.976171)
skew = -0.0775543
texture = ExtResource("16_1xful")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BananaArea"]
position = Vector2(-40, -89)
shape = SubResource("RectangleShape2D_8tg5r")

[node name="ScoreManager" type="Node2D" parent="."]
position = Vector2(-3312, -1840)

[node name="100Points" type="AnimatedSprite2D" parent="ScoreManager"]
position = Vector2(9.53674e-07, 0)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_eouja")
animation = &"ScoreAnimation"

[node name="SideCat" type="Sprite2D" parent="."]
position = Vector2(-5832, -2624)
texture = ExtResource("19_x5thb")

[node name="StandCat" type="Sprite2D" parent="."]
position = Vector2(-5352, -2608)
texture = ExtResource("20_ggn5r")

[node name="BlackCat" type="Sprite2D" parent="."]
position = Vector2(-5568, -2960)
texture = ExtResource("21_mb6kp")

[node name="BlackSideCat" type="Sprite2D" parent="."]
position = Vector2(-5824, -2944)
texture = ExtResource("22_degpx")

[node name="BlackStandCat" type="Sprite2D" parent="."]
position = Vector2(-5336, -2936)
texture = ExtResource("23_dt8fl")

[connection signal="body_entered" from="OvenPrefab/PrefabBoundry1" to="Player" method="_on_prefab_boundry_1_body_entered"]
[connection signal="body_entered" from="BenchPrefab1/PrefabBoundry1" to="Player" method="_on_prefab_boundry_1_body_entered"]
[connection signal="body_entered" from="BenchPrefab2/PrefabBoundry1" to="Player" method="_on_prefab_boundry_1_body_entered"]
[connection signal="body_entered" from="BenchPrefab3/PrefabBoundry1" to="Player" method="_on_prefab_boundry_1_body_entered"]
[connection signal="body_entered" from="BenchPrefab4/PrefabBoundry1" to="Player" method="_on_prefab_boundry_1_body_entered"]
[connection signal="body_entered" from="FruitBowlArea" to="Player" method="_on_fruit_bowl_area_body_entered"]
[connection signal="body_exited" from="FruitBowlArea" to="Player" method="_on_fruit_bowl_area_body_exited"]
[connection signal="body_entered" from="AppleArea" to="Player" method="_on_apple_area_body_entered"]
[connection signal="body_exited" from="AppleArea" to="Player" method="_on_apple_area_body_exited"]
[connection signal="body_entered" from="PearArea" to="Player" method="_on_pear_area_body_entered"]
[connection signal="body_exited" from="PearArea" to="Player" method="_on_pear_area_body_exited"]
[connection signal="body_entered" from="BananaArea" to="Player" method="_on_banana_area_body_entered"]
[connection signal="body_exited" from="BananaArea" to="Player" method="_on_banana_area_body_exited"]
